--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,25 @@
 .externalNativeBuild
 .cxx
 local.properties
-/gradle/*
+/gradle/**
 /.idea
 .properties
+# Built application files
+*.apk
+
+# Files for the Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+#intellij project files
+*.iml
+*.idea
